ingress/obiam-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obiam-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:567870626192:certificate/d71d57e3-9bfc-42e3-aabd-28da3e588d34
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: abhishek-obiam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obiam-service
            port:
              number: 80
